# Lambda-SNARK-R

./: .gitignore  CHANGELOG.md  README.md  ROADMAP.md  SECURITY.md  TESTING.md  vcpkg.json
.github/workflows/: ci.yml
cpp-core/: CMakeLists.txt  README.md  vcpkg.json
cpp-core/src/: commitment.cpp  ffi.cpp  lean_ffi.cpp  ntt.cpp  r1cs.cpp
cpp-core/tests/: test_commitment.cpp  test_conformance.cpp  test_ntt.cpp  test_r1cs.cpp
docs/: m5-analysis.md  m5.2-zk-plan.md  ntt-implementation.md  ntt-modulus.md
docs/development/: M4.1-r1cs-design.md  axiom-elimination-plan.md  lean-integration-prototype.md  seal-ffi-exploration.md  session-2025-11-06-FINAL.md  session-2025-11-06-M1.3.md  session-2025-11-06.md  session-2025-11-07-M2.1.md  session-2025-11-07-M4-progress-summary.md  session-2025-11-07-M4.2-core-structures.md  vcpkg-setup.md
docs/spec/: specification.sdoc
docs/vdad/: m5.1.4b-domain-fix-report.md  m5.1.5-benchmark-bug-report.md  m5.1.5-benchmark-results.md  m7.3-security-audit.md
formal/: FORMAL_VERIFICATION_AUDIT.md  LambdaSNARK.lean  README.md  S3_INFRASTRUCTURE_RESEARCH.md  S3_PHASE1_COMPLETE.md  SESSION_2025_11_16.md  SESSION_SUMMARY_2025-11-16.md  VERIFICATION_PLAN.md  ZULIP_DRAFT_P1.md  ZULIP_DRAFT_P3_P4.md  test_mod_api.lean  test_poly_div.lean
formal/LambdaSNARK/: Completeness.lean  Constraints.lean  Core.lean  ForkingEquations.lean  ForkingInfrastructure.lean  Polynomial.lean  (+1 more)
rust-api/: Cargo.toml
rust-api/lambda-snark-core/: Cargo.toml
rust-api/lambda-snark-core/src/: lib.rs  r1cs.rs
scripts/: setup.sh
test-vectors/: README.md
(+51 files in other folders)
